--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.orainteractive.orachat">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:name=".app.ChatApplication"
         android:allowBackup="true"
@@ -19,6 +22,7 @@
         </activity>
 
         <activity android:name=".view.HomeActivity"/>
+        <activity android:name=".view.login.LoginActivity"/>
 
     </application>
 
