--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.splash.SplashActivity">
+        <activity
+            android:name=".view.splash.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,8 +23,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".view.HomeActivity"/>
-        <activity android:name=".view.login.LoginActivity"/>
+        <activity
+            android:name=".view.home.HomeActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.login.LoginActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
