creating chat room views and presenter retrofit call to retrieve chat messages showing chat massages on screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity
             android:name=".view.login.LoginActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".view.chatroom.ChatRoomActivity"
+            android:screenOrientation="portrait" />
 
     </application>
 
