--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,5 +60,9 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:2.4"
     compile 'com.jakewharton:butterknife:8.6.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    //Unit Testing
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:1.10.19'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.2'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.2'
 }
